test/should-fail/jfxc3106Test.fx
/**
 * JFXC-3106 Sequence variable with public-init modifier can 
 * be updated outside of script file.
 *
 * @subtest
 */

public class jfxc3106Test {
    public-init var seq : String[];
}

